@startuml Diagrama de Classes - Sistema de Curadoria

package "com.curadoria.view" {
    class TelaLogin {
        - txtLogin: JTextField
        - txtSenha: JPasswordField
        - btnEntrar: JButton
        - btnSair: JButton
        + TelaLogin()
        + actionPerformed(ActionEvent): void
        - realizarLogin(): void
        + main(String[]): void
    }
    
    class TelaAdmin {
        - admin: Usuario
        - usuarioDAO: UsuarioDAO
        - tabela: JTable
        - modelo: DefaultTableModel
        + TelaAdmin(Usuario)
        - inicializarComponentes(): void
        - carregarTabela(): void
        - editarUsuario(): void
        - inativarUsuario(): void
    }
    
    class TelaComum {
        - usuarioLogado: Usuario
        - recursoDAO: RecursoDAO
        - categoriaDAO: CategoriaDAO
        - txtTitulo: JTextField
        - txtAutor: JTextField
        - cmbCategoria: JComboBox
        - tabelaRecursos: JTable
        + TelaComum(Usuario)
        - criarPainelCadastro(): JPanel
        - criarPainelListagem(): JPanel
        - cadastrarRecurso(): void
        - carregarTabelaRecursos(): void
    }
    
    class TelaCadastroEdicaoUsuario {
        - usuarioDAO: UsuarioDAO
        - usuarioEdicao: Usuario
        - txtNome: JTextField
        - txtIdade: JTextField
        - txtLogin: JTextField
        - txtSenha: JPasswordField
        - cmbTipo: JComboBox
        - chkIA: JCheckBox
        - chkCyber: JCheckBox
        - chkEtica: JCheckBox
        + TelaCadastroEdicaoUsuario(JFrame, Usuario)
        - initComponents(): void
        - validar(): boolean
        - onSalvar(): void
    }
}

package "com.curadoria.model" {
    class Usuario {
        - IdUsuario: int
        - nome: String
        - idade: int
        - login: String
        - senha: String
        - tipo: String
        - status: Boolean
        - interesses: String
        + getNome(): String
        + setNome(String): void
        + getIdade(): int
        + setIdade(int): void
        + getLogin(): String
        + setLogin(String): void
        + getTipo(): String
        + setTipo(String): void
        + getStatus(): Boolean
        + setStatus(Boolean): void
        + getInteresses(): String
        + setInteresses(String): void
    }
    
    class Recurso {
        - idRecurso: int
        - titulo: String
        - autor: String
        - idUsuario: int
        - categoria: Categoria
        + getTitulo(): String
        + setTitulo(String): void
        + getAutor(): String
        + setAutor(String): void
        + getCategoria(): Categoria
        + setCategoria(Categoria): void
        + getIdUsuario(): int
        + setIdUsuario(int): void
    }
    
    class Categoria {
        - idCategoria: int
        - nome: String
        - descricao: String
        + getIdCategoria(): int
        + setIdCategoria(int): void
        + getNome(): String
        + setNome(String): void
        + getDescricao(): String
        + setDescricao(String): void
    }
}

package "com.curadoria.dao" {
    class UsuarioDAO {
        + buscarPorLogin(String, String): Usuario
        + buscarPorId(int): Usuario
        + cadastrar(Usuario): void
        + atualizar(Usuario): void
        + inativar(int): void
        + listarTodos(): List<Usuario>
    }
    
    class RecursoDAO {
        + cadastrar(Recurso): void
        + listarTodos(): List<Recurso>
    }
    
    class CategoriaDAO {
        + listarTodas(): List<Categoria>
        + buscarPorId(int): Categoria
        + inserirPadroes(): void
        + salvar(Categoria): void
    }
}

package "com.curadoria.db" {
    class ConnectionFactory {
        - URL: String
        - USER: String
        - PASSWORD: String
        + getConnection(): Connection
        + closeConnection(Connection): void
    }
}

' Relacionamentos
TelaLogin --> UsuarioDAO : usa
TelaLogin --> Usuario : cria
TelaLogin --> TelaAdmin : cria
TelaLogin --> TelaComum : cria

TelaAdmin --> UsuarioDAO : usa
TelaAdmin --> Usuario : usa
TelaAdmin --> TelaCadastroEdicaoUsuario : cria

TelaComum --> RecursoDAO : usa
TelaComum --> CategoriaDAO : usa
TelaComum --> Recurso : cria
TelaComum --> Usuario : usa

TelaCadastroEdicaoUsuario --> UsuarioDAO : usa
TelaCadastroEdicaoUsuario --> Usuario : usa

UsuarioDAO --> ConnectionFactory : usa
UsuarioDAO --> Usuario : retorna

RecursoDAO --> ConnectionFactory : usa
RecursoDAO --> Recurso : retorna
RecursoDAO --> Categoria : usa

CategoriaDAO --> ConnectionFactory : usa
CategoriaDAO --> Categoria : retorna

Recurso --> Categoria : associa
Recurso --> Usuario : pertence

note right of Usuario
  Tipo pode ser:
  "Administrador" ou
  "Usuário comum"
end note

note right of Recurso
  Ordenação alfabética
  por título
end note

note right of Categoria
  Categorias fixas:
  - IA Responsável
  - Cibersegurança
  - Privacidade & Ética Digital
end note

@enduml

